--- a/vis/style.css
+++ b/vis/style.css
@@ -161,6 +161,7 @@ svg {
     font-size: 1em;
     text-transform: uppercase;
     font-weight: bold;
+    overflow: hidden;
     /* padding: 4px; */
     /* padding-bottom: 2%; */
 }
@@ -401,31 +402,6 @@ svg {
 }
 
 
-.tagcloud .inner {
-  position: relative;
-  overflow-y: scroll;
-  height: 100%;
-  width: 100%;
-  height: 100%;
-  /* overflow: none; */
-  padding-right: 43px;
-}
-.tagcloud g {
-  /*transition: opacity .1s ease-in-out;*/
-}
-.tagcloud text {
-
-  pointer-events:all;
-  text-transform: uppercase;
-  font-weight: bold;
-  /*padding: 5px;*/
-  fill: #FFF;
-  cursor:pointer;
-  display: table;
-  text-shadow: 1px 1px 1px #000;
-  text-shadow: 0 0 1px #000,0 0 1px rgba(0,0,0,0.8),0 0 2px #000;
-
-}
 
 .tagcloud line{
   stroke:none;
@@ -452,36 +428,6 @@ svg {
 
 
 
-.infobar.hide {
-  display: none;
-}
-.infobar.sneak {
-    left: -495px;
-}
-.infobar.sneak:hover {
-    left: -490px;
-}
-.infobar .infobutton {
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  right: 10px;
-  width: 40px;
-  height: 30px;
-  position: absolute;
-  opacity: 0.5;
-  background-image: url("img/infobutton.svg");
-  top: 50%;
-  /* opacity: 0.33; */
-  cursor: pointer;
-  transition: transform 0.3s , right 0.3s;
-}
-.infobar.sneak .infobutton {
-    /* transform: rotate(180deg); */
-    right: -40px;
-    background-image: url("img/infobutton2.svg");
-    width: 40px;
-    height: 40px;
-}
 
 .detail .slidebutton {
     background-size: 100% 100%;
@@ -535,6 +481,9 @@ svg {
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
+}
+.detail .outer::-webkit-scrollbar * {
+  background:transparent;
 }
 .detail .inner {
   /*height: 100%;
